// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apartment Status Default 1`] = `
<v-card
  class="dashboard-card feed-card"
>
  <v-card-title
    primary-title=""
  >
    <div
      class="title"
    >
      <span>
        <span>
          Apartment Status
        </span>
      </span>
    </div>
  </v-card-title>
   
  <div
    class="card-scroll-content"
  >
    <v-container
      fluid=""
    >
      <v-list
        class="apartment-status-list"
      >
        <div>
          <v-layout
            class="status-row"
            row=""
          >
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-delete
              </v-icon>
            </v-flex>
             
            <v-spacer />
             
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-checkbox-marked-circle
              </v-icon>
            </v-flex>
             
            <v-spacer />
          </v-layout>
          <v-layout
            class="status-row"
            row=""
          >
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-recycle
              </v-icon>
            </v-flex>
             
            <v-spacer />
             
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-checkbox-marked-circle
              </v-icon>
            </v-flex>
             
            <v-spacer />
          </v-layout>
          <v-layout
            class="status-row"
            row=""
          >
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-cart
              </v-icon>
            </v-flex>
             
            <v-spacer />
             
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-checkbox-marked-circle
              </v-icon>
            </v-flex>
             
            <v-spacer />
          </v-layout>
          <v-layout
            class="status-row"
            row=""
          >
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-spray-bottle
              </v-icon>
            </v-flex>
             
            <v-spacer />
             
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-checkbox-marked-circle
              </v-icon>
            </v-flex>
             
            <v-spacer />
          </v-layout>
          <v-layout
            class="status-row"
            row=""
          >
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-washing-machine
              </v-icon>
            </v-flex>
             
            <v-spacer />
             
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-checkbox-marked-circle
              </v-icon>
            </v-flex>
             
            <v-spacer />
          </v-layout>
          <v-layout
            class="status-row"
            row=""
          >
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-tie
              </v-icon>
            </v-flex>
             
            <v-spacer />
             
            <v-flex
              xs4=""
            >
              <v-icon
                class="right"
              >
                mdi-checkbox-marked-circle
              </v-icon>
            </v-flex>
             
            <v-spacer />
          </v-layout>
        </div>
      </v-list>
       
      <home-for-dinner-input />
    </v-container>
  </div>
</v-card>
`;

exports[`Storyshots Apartment Status/Item Completed 1`] = `
<v-layout
  class="status-row"
  row=""
>
  <v-flex
    xs4=""
  >
    <v-icon
      class="right"
    >
      mdi-delete
    </v-icon>
  </v-flex>
   
  <v-spacer />
   
  <v-flex
    xs4=""
  >
    <v-icon
      class="right"
    >
      mdi-checkbox-marked-circle
    </v-icon>
  </v-flex>
   
  <v-spacer />
</v-layout>
`;

exports[`Storyshots Apartment Status/Item Pending 1`] = `
<v-layout
  class="status-row"
  row=""
>
  <v-flex
    xs4=""
  >
    <v-icon
      class="right"
    >
      mdi-delete
    </v-icon>
  </v-flex>
   
  <v-spacer />
   
  <v-flex
    xs4=""
  >
    <v-icon
      class="right"
    >
      mdi-alert
    </v-icon>
  </v-flex>
   
  <v-spacer />
</v-layout>
`;
